--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>search</title>
+    <title>Switch</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
     <link rel="stylesheet" href="search.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
